--- a/index.html
+++ b/index.html
@@ -17,8 +17,30 @@
     
 </head>
 <body>
-
-    
+    <!-- header begin -->
+    <header class="d-flex justify-content-around align-items-center py-4 px-5 border-bottom border-3">
+        <h1 class="header-logo m-0">
+            <img src="./assets/images/paris_logo.svg" alt="paris">
+        </h1>
+        <nav class="header-nav d-flex gap-5 align-items-center">
+            <ul class=" header-nav__list d-flex list-unstyled justify-content-around align-items-center m-0 gap-5">
+                <li class="text-center"><a href="">Services</a></li>
+                <li class="text-center"><a href="">Municipalité</a></li>
+                <li class="text-center"><a href="">Participez !</a></li>
+                <li class="text-center"><a href="">Que faire à Paris ?</a></li>
+                <li class="text-center"><a href="">Jeux 2024</a></li>
+            </ul>
+            <button type="button" class="header-nav__btn btn btn-secondary d-flex justify-content-around gap-3 rounded-0 align-items-center">
+                <i class="icon-search"></i>
+                <span>Research</span>
+            </button>
+            <a class="header-nav__connection"> 
+                <span>Mon paris</span>
+                <img src="./assets/images/user.svg" alt="">
+            </a>
+        </nav>
+    </header>
+    <!-- header end -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
