add spotlight and actuality sections

--- a/index.html
+++ b/index.html
@@ -94,31 +94,57 @@
                     </ul>
                 </nav>
             </section>
-            <section class="news col-6">
-                <h2>À la Une</h2>
-                <h3>
-                    Paris renforce son accessibilité en vue des Jeux olympiques et
-                    paralympiques
-                </h3>
-                <p>
-                    Alors que près de 350 000 visiteurs en situation de handicap sont
-                    attendus à Paris pour les Jeux olympiques et paralympiques, la Ville
-                    renforce son accessibilité …
-                </p>
-                <article>
-                    <h2>Actualité</h2>
-                    <h3>
-                        J-500 avant les Jeux paralympiques : tout ce qu'il faut savoir
-                        pour en profiter
-                    </h3>
+            <section class="spotlight col-6">
+                <article class="spotlight__article">
+                    <div class="img-wrapper">
+                        <img class="spotlight__img" src="./assets/images/banner.jpg" alt="">
+                    </div>
+                    
+                    <div class="spotlight__content">
+                        <h2>À la Une</h2>
+                        <h3>
+                            Paris renforce son accessibilité en vue des Jeux olympiques et
+                            paralympiques
+                        </h3>
+                        <p>
+                            Alors que près de 350 000 visiteurs en situation de handicap sont
+                            attendus à Paris pour les Jeux olympiques et paralympiques, la Ville
+                            renforce son accessibilité …
+                        </p>
+                    </div>
                 </article>
-                <article>
-                    <h2>Actualité</h2>
-                    <h3>
-                        J-500 avant les Jeux paralympiques : tout ce qu'il faut savoir
-                        pour en profiter
-                    </h3>
-                </article>
+
+                <section class="actuality">
+                    <article class="actuality__article">
+                        <div class="actuality__img ">
+                            <div class="img-wrapper">
+                                <img src="https://cdn.paris.fr/paris/2021/11/22/large-11fc2400c90c938808a9c89cda5ac683.jpg" alt="" loading="lazy">
+                            </div>
+                        </div>
+                        <div class="actuality__content">
+                            <h2>Actualité</h2>
+                            <h3>
+                                J-500 avant les Jeux paralympiques : tout ce qu'il faut savoir
+                                pour en profiter
+                            </h3>
+                        </div>
+                    </article>
+                    <article class="actuality__article">
+                        <div class="actuality__img">
+                            <div class="img-wrapper">
+                                <img src="https://cdn.paris.fr/paris/2023/03/30/large-acb26e072b65c8f80ad1909ccf255f1b.jpg" alt="" loading="lazy">
+                            </div>
+                        </div>
+                        <div class="actuality__content">
+                            <h2>Actualité</h2>
+                            <h3>
+                                J-500 avant les Jeux paralympiques : tout ce qu'il faut savoir
+                                pour en profiter
+                            </h3>
+                        </div>
+                    </article>
+                </section>
+
             </section>
             <aside class="col">aside</aside>
         </div>
