--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <ul class="side-nav__services d-flex flex-column">
                         <li>
                             <a href="" class="d-flex align-items-center">
-                                <img src="https://cdn.paris.fr/paris/2020/09/30/ad73fb242f691bc9ba2b66f99554dd87.svg"/>
+                                <img src="https://cdn.paris.fr/paris/2020/09/30/ad73fb242f691bc9ba2b66f99554dd87.svg" />
                                 <span>Carte d'identité / Passeport</span>
                             </a>
                         </li>
@@ -99,7 +99,7 @@
                     <div class="img-wrapper">
                         <img class="spotlight__img" src="./assets/images/banner.jpg" alt="">
                     </div>
-                    
+
                     <div class="spotlight__content">
                         <h2>À la Une</h2>
                         <h3>
@@ -118,7 +118,8 @@
                     <article class="actuality__article">
                         <div class="actuality__img ">
                             <div class="img-wrapper">
-                                <img src="https://cdn.paris.fr/paris/2021/11/22/large-11fc2400c90c938808a9c89cda5ac683.jpg" alt="" loading="lazy">
+                                <img src="https://cdn.paris.fr/paris/2021/11/22/large-11fc2400c90c938808a9c89cda5ac683.jpg"
+                                    alt="" loading="lazy">
                             </div>
                         </div>
                         <div class="actuality__content">
@@ -132,7 +133,8 @@
                     <article class="actuality__article">
                         <div class="actuality__img">
                             <div class="img-wrapper">
-                                <img src="https://cdn.paris.fr/paris/2023/03/30/large-acb26e072b65c8f80ad1909ccf255f1b.jpg" alt="" loading="lazy">
+                                <img src="https://cdn.paris.fr/paris/2023/03/30/large-acb26e072b65c8f80ad1909ccf255f1b.jpg"
+                                    alt="" loading="lazy">
                             </div>
                         </div>
                         <div class="actuality__content">
@@ -146,9 +148,50 @@
                 </section>
 
             </section>
-            <aside class="col">aside</aside>
+            <aside class="col aside-news">
+                <ul class="aside-news__list">
+                    <li class="aside-news__item">
+                        <div class="time">
+                            <p class="date">16.</p>
+                            <p class="month">04</p>
+                            <img src="./assets/images/clock.svg" alt="">
+                        </div>
+                        <div class="content-wrap">
+                            <p class="content">08h00 · <strong>Le saviez-vous&nbsp;?</strong> Le 16 avril 1650, l'institution de l'Oratoire
+                                est fondée rue des Charbonniers, sur l'actuelle avenue Denfert-Rochereau. Plus tard,
+                                l'institution et son noviciat deviennent l'hôpital Saint-Vincent-de-Paul. Après avoir
+                                accueilli <a href="https://lesgrandsvoisins.org/" target="_blank" rel="noopener"
+                                    title="Ouverture dans un nouvel onglet">les Grands Voisins</a>, le site est maintenant
+                                en travaux pour devenir un écoquartier avec des logements et des commerces. </p>
+                            <a class="aside__showmore-btn" href="">En savoir +</a>
+
+                        </div>
+                    </li>
+                    <li class="aside-news__item">
+                        <div class="time">
+                            <p class="date">15.</p>
+                            <p class="month">04</p>
+                            <img src="./assets/images/clock.svg" alt="">
+                        </div>
+                        <div class="content-wrap">
+                            <p class="content">08h00 · <strong> Le saviez-vous&nbsp;?</strong> Le 15 avril 1980, Jean-Paul Sartre meurt à
+                                Paris, où il a résidé toute sa vie. Écrivain et philosophe emblématique du courant
+                                existentialiste, Sartre participe activement aux événements de mai 1968. Il partagera
+                                jusqu'à sa mort la vie de <a
+                                    href="https://www.paris.fr/pages/sur-les-pas-de-simone-de-beauvoir-ecrivaine-et-feministe-emblematique-de-paris-21516">Simone
+                                    de Beauvoir</a>, avec qui il formait un célèbre couple de la vie intellectuelle
+                                parisienne.</p>
+                            <a class="aside__showmore-btn" href="">En savoir +</a>
+                            <img class="aside-news__item-img" alt="Jean-Paul Sartre (1905-1980), philosophe et écrivain français. 1959. Photographie de Jean Marquis (1926-2019)." loading="lazy" src="https://cdn.paris.fr/paris/2021/03/29/large-d314c86e461b2444b7be2133a7db1585.jpg">
+                        </div>
+                    </li>
+                </ul>
+            </aside>
         </div>
     </main>
+    <footer>
+        
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
