add footer and modified side-nav__services( html structure and css)

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </nav>
     </header>
     <!-- header end -->
-    <main class="container-fluid">
+    <main class="container-fluid mb-5">
         <div class="row">
             <section class="side-nav col text-center d-flex flex-column gap-4">
                 <h2 class="side-nav__title mt-5">Accès rapides</h2>
@@ -81,13 +81,13 @@
                     <ul class="side-nav__services d-flex flex-column">
                         <li>
                             <a href="" class="d-flex align-items-center">
-                                <img src="https://cdn.paris.fr/paris/2020/09/30/ad73fb242f691bc9ba2b66f99554dd87.svg" />
+                                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 30 30"><path d="M8.115 21a4.2 4.2 0 0 1-3-1.17.47.47 0 0 1-.14-.33v-3.37a3.11 3.11 0 0 1 6.22 0v3.37a.46.46 0 0 1-.13.33A4.21 4.21 0 0 1 8.115 21zm-2.17-1.67a3.42 3.42 0 0 0 4.35 0v-3.2a2.18 2.18 0 0 0-4.35 0zm4.82.2zm13.9-8.71h-9.79a.47.47 0 1 1 0-.93h9.75a.47.47 0 1 1 0 .93zm0 3.11h-9.79a.46.46 0 0 1-.47-.46.47.47 0 0 1 .47-.47h9.75a.47.47 0 0 1 .47.47.46.46 0 0 1-.43.46zm0 3.12h-9.79a.47.47 0 0 1 0-.94h9.75a.47.47 0 0 1 0 .94zm0 3.11h-9.79a.47.47 0 1 1 0-.93h9.75a.47.47 0 1 1 0 .93zm-16.62-6.2a2.43 2.43 0 1 1 2.43-2.43 2.43 2.43 0 0 1-2.43 2.43zm0-3.93a1.5 1.5 0 1 0 1.5 1.5 1.5 1.5 0 0 0-1.5-1.5zm18.08 14.07H3.875a3 3 0 0 1-3-3V8.9a3 3 0 0 1 3-3h22.25a3 3 0 0 1 3 3v12.25a3 3 0 0 1-3 2.95zM3.875 6.88a2 2 0 0 0-2 2v12.27a2 2 0 0 0 2 2h22.25a2 2 0 0 0 2-2V8.9a2 2 0 0 0-2-2z"/></svg>
                                 <span>Carte d'identité / Passeport</span>
                             </a>
                         </li>
                         <li>
                             <a href="" class="d-flex align-items-center">
-                                <img src="https://cdn.paris.fr/paris/2020/09/30/145b5b043369d2c3e57a05ed85b33cb1.svg" />
+                                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 30 30"><path d="M14.994 3.87a5.84 5.84 0 0 0-5.59 5.6H3.285a.56.56 0 0 0-.57.56v15.53a.56.56 0 0 0 .57.57h23.43a.57.57 0 0 0 .57-.57V10.03a.57.57 0 0 0-.57-.56h-6.14a5.85 5.85 0 0 0-5.58-5.6zm0 1.14a4.68 4.68 0 0 1 4.41 4.46h-8.82a4.68 4.68 0 0 1 4.41-4.46zm-9.44 5.59h19.302l-8.452 5.62v-.36a.57.57 0 0 0-.609-.57h-2.13a.57.57 0 0 0-.56.57v.24zm-1.708.16l9.26 6.76v2.58a.57.57 0 0 0 .558.57h2.131a.57.57 0 0 0 .61-.57v-2.519l9.74-6.48V25l-22.3.01zm10.388 5.67h1v3.12h-1z"/></svg>
                                 <span>Travailler à Paris</span>
                             </a>
                         </li>
@@ -157,11 +157,13 @@
                             <img src="./assets/images/clock.svg" alt="">
                         </div>
                         <div class="content-wrap">
-                            <p class="content">08h00 · <strong>Le saviez-vous&nbsp;?</strong> Le 16 avril 1650, l'institution de l'Oratoire
+                            <p class="content">08h00 · <strong>Le saviez-vous&nbsp;?</strong> Le 16 avril 1650,
+                                l'institution de l'Oratoire
                                 est fondée rue des Charbonniers, sur l'actuelle avenue Denfert-Rochereau. Plus tard,
                                 l'institution et son noviciat deviennent l'hôpital Saint-Vincent-de-Paul. Après avoir
                                 accueilli <a href="https://lesgrandsvoisins.org/" target="_blank" rel="noopener"
-                                    title="Ouverture dans un nouvel onglet">les Grands Voisins</a>, le site est maintenant
+                                    title="Ouverture dans un nouvel onglet">les Grands Voisins</a>, le site est
+                                maintenant
                                 en travaux pour devenir un écoquartier avec des logements et des commerces. </p>
                             <a class="aside__showmore-btn" href="">En savoir +</a>
 
@@ -174,7 +176,8 @@
                             <img src="./assets/images/clock.svg" alt="">
                         </div>
                         <div class="content-wrap">
-                            <p class="content">08h00 · <strong> Le saviez-vous&nbsp;?</strong> Le 15 avril 1980, Jean-Paul Sartre meurt à
+                            <p class="content">08h00 · <strong> Le saviez-vous&nbsp;?</strong> Le 15 avril 1980,
+                                Jean-Paul Sartre meurt à
                                 Paris, où il a résidé toute sa vie. Écrivain et philosophe emblématique du courant
                                 existentialiste, Sartre participe activement aux événements de mai 1968. Il partagera
                                 jusqu'à sa mort la vie de <a
@@ -182,15 +185,140 @@
                                     de Beauvoir</a>, avec qui il formait un célèbre couple de la vie intellectuelle
                                 parisienne.</p>
                             <a class="aside__showmore-btn" href="">En savoir +</a>
-                            <img class="aside-news__item-img" alt="Jean-Paul Sartre (1905-1980), philosophe et écrivain français. 1959. Photographie de Jean Marquis (1926-2019)." loading="lazy" src="https://cdn.paris.fr/paris/2021/03/29/large-d314c86e461b2444b7be2133a7db1585.jpg">
+                            <img class="aside-news__item-img"
+                                alt="Jean-Paul Sartre (1905-1980), philosophe et écrivain français. 1959. Photographie de Jean Marquis (1926-2019)."
+                                loading="lazy"
+                                src="https://cdn.paris.fr/paris/2021/03/29/large-d314c86e461b2444b7be2133a7db1585.jpg">
                         </div>
                     </li>
                 </ul>
             </aside>
         </div>
     </main>
-    <footer>
-        
+    <footer class="footer">
+        <div class="footer-left">
+            <div class="select-wrapper">
+                <img src="./assets/images/paris_logo.svg" alt="paris" />
+                <select class="paris-footer-select-object" data-action="footer#onChange" data-target="footer.mairies">
+                    <option value="">Les Mairies</option>
+                    <option value="https://mairiepariscentre.paris.fr/">
+                        Mairie de Paris Centre
+                    </option>
+                    <option value="https://mairie05.paris.fr/">
+                        Mairie du 5ᵉ arrondissement
+                    </option>
+                    <option value="https://mairie06.paris.fr/">
+                        Mairie du 6ᵉ arrondissement
+                    </option>
+                    <option value="https://mairie07.paris.fr/">
+                        Mairie du 7ᵉ arrondissement
+                    </option>
+                    <option value="https://mairie08.paris.fr/">
+                        Mairie du 8ᵉ arrondissement
+                    </option>
+                    <option value="https://mairie09.paris.fr/">
+                        Mairie du 9ᵉ arrondissement
+                    </option>
+                    <option value="https://mairie10.paris.fr/">
+                        Mairie du 10ᵉ arrondissement
+                    </option>
+                    <option value="https://mairie11.paris.fr/">
+                        Mairie du 11ᵉ arrondissement
+                    </option>
+                    <option value="https://mairie12.paris.fr/">
+                        Mairie du 12ᵉ arrondissement
+                    </option>
+                    <option value="https://mairie13.paris.fr/">
+                        Mairie du 13ᵉ arrondissement
+                    </option>
+                    <option value="https://mairie14.paris.fr/">
+                        Mairie du 14ᵉ arrondissement
+                    </option>
+                    <option value="https://mairie15.paris.fr/">
+                        Mairie du 15ᵉ arrondissement
+                    </option>
+                    <option value="https://mairie16.paris.fr/">
+                        Mairie du 16ᵉ arrondissement
+                    </option>
+                    <option value="https://mairie17.paris.fr/">
+                        Mairie du 17ᵉ arrondissement
+                    </option>
+                    <option value="https://mairie18.paris.fr/">
+                        Mairie du 18ᵉ arrondissement
+                    </option>
+                    <option value="https://mairie19.paris.fr/">
+                        Mairie du 19ᵉ arrondissement
+                    </option>
+                    <option value="https://mairie20.paris.fr/">
+                        Mairie du 20ᵉ arrondissement
+                    </option>
+                </select>
+                <i class="icon-down-open"></i>
+            </div>
+
+            <ul class="related-services">
+                <li>
+                    <span>Visit Paris</span>
+                    <a class="service-link" href="">Tourist office</a>
+                </li>
+                <li>
+                    <span>Open Data</span>
+                    <a href="">En savoir + </a>
+                </li>
+                <li>
+                    <span>Démarches</span>
+                    <a href="">Services en ligne</a>
+                </li>
+            </ul>
+            <nav class="footer-nav">
+                <ul class="footer-nav__list">
+                    <li><a href="">contact</a></li>
+                    <li><a href="">presse</a></li>
+                    <li><a href="">mentions légales</a></li>
+                    <li><a href="">accessibilité</a></li>
+                    <li><a href="">politique de cookies</a></li>
+                    <li><a href="">plan du site</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="footer-right">
+            <p>Recevez chaque semaine l'actualité de votre ville</p>
+            <input type="email" name="" id="" placeholder="Votre email">
+            <button type="button">
+                <span>s'abonner</span>
+            </button>
+            <p>Suivez-nous sur les réseaux sociaux</p>
+            <ul class="social-icons">
+                <li>
+                    <a href="">
+                        <i class="icon-facebook-official"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="icon-twitter-squared"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="icon-instagram"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="icon-linkedin"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="icon-youtube-play"></i>
+                    </a>
+                </li>
+            </ul>
+            <p>Une question ? Contactez-nous sur</p>
+            <a href="">@parisjecoute</a>
+        </div>
+
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
