add footer and mixins

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </nav>
     </header>
     <!-- header end -->
+    <!-- main begin -->
     <main class="container-fluid mb-5">
         <div class="row">
             <section class="side-nav col text-center d-flex flex-column gap-4">
@@ -94,12 +95,11 @@
                     </ul>
                 </nav>
             </section>
-            <section class="spotlight col-6">
+            <section class="spotlight col-6 d-flex flex-column justify-content-start">
                 <article class="spotlight__article">
-                    <div class="img-wrapper">
-                        <img class="spotlight__img" src="./assets/images/banner.jpg" alt="">
+                    <div class="spotlight__img">
+                        <img  src="./assets/images/banner.jpg" alt="">
                     </div>
-
                     <div class="spotlight__content">
                         <h2>À la Une</h2>
                         <h3>
@@ -113,8 +113,7 @@
                         </p>
                     </div>
                 </article>
-
-                <section class="actuality">
+                <section class="actuality d-flex justify-content-between">
                     <article class="actuality__article">
                         <div class="actuality__img ">
                             <div class="img-wrapper">
@@ -146,7 +145,6 @@
                         </div>
                     </article>
                 </section>
-
             </section>
             <aside class="col aside-news">
                 <ul class="aside-news__list">
@@ -195,6 +193,8 @@
             </aside>
         </div>
     </main>
+    <!-- main end -->
+    <!-- footer begin -->
     <footer class="footer">
         <div class="footer-left">
             <div class="select-wrapper">
@@ -320,7 +320,7 @@
         </div>
 
     </footer>
-
+    <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
